[firefox] fix treestyletabs close button clipping

--- a/preferences/Firefox/treestyletab.css
+++ b/preferences/Firefox/treestyletab.css
@@ -21,8 +21,6 @@ Useful links:
 */
 
 .tab tab-twisty {
-  margin-left: 3px;
-  margin-right: 5px;
   border-radius: 10px;
 }
 
